# inzynierka_169257

./: .gitignore  README.md  app.py  eda.ipynb  pyproject.toml  requirements.txt
models/: __init__.py  base.py  plain_cnn.py  resnet.py
src/: arch_stats.py  clean_data.py  data_loaders.py  dataset.py  download_checkpoint.py  download_data.py  eval.py  hooks.py  mem_usage.py  metrics.py  train.py  train_configs.yml  train_multiple.py  trainer.py
src/models/: __init__.py  base.py  convnext.py  plain.py  plain_cnn.py  plainnet.py  resnet.py  resnext.py
tests/: test_metrics.py  test_models.py
