[project]
name = "inzynierka-169257"
version = "0.4.1"
description = "Emotion recognition using CNNs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagededup>=0.3.3",
    "jupyter",
    "matplotlib",
    "numpy",
    "opencv-contrib-python",
    "pandas",
    "pillow",
    "requests",
    "scikit-learn",
    "tabulate",
    "tensorboard",
    "torch",
    "torchvision",
    "torchmetrics",
    "gradio>=6.1.0",
]
