[project]
name = "inzynierka-169257"
version = "0.4.1"
description = "Emotion recognition using CNNs"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "imagededup",
    "jupyter",
    "matplotlib",
    "numpy",
    "opencv-contrib-python",
    "pandas",
    "pillow",
    "requests",
    "scikit-learn",
    "tabulate",
    "tensorboard",
    "torch",
    "torchvision",
    "torchmetrics",
    "gradio>=6.1.0",
    "pytest>=9.0.2",
]
